# cycu-clock-in-clock-out-desktop

./: .gitignore  README.md  app.spec  pyproject.toml
